--- a/sass/components/_modal-form.scss
+++ b/sass/components/_modal-form.scss
@@ -24,7 +24,7 @@
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
   line-height: 1.16;
-  color:  $dark-color;
+  color: $dark-color;
 
   transition: outline-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
@@ -39,7 +39,7 @@
   resize: none;
   padding: 16px;
   letter-spacing: 0.01em;
-  color:  $dark-color;
+  color: $dark-color;
 }
 
 .form-icon {
@@ -55,59 +55,45 @@
   }
 }
 
-.check-box {
-  position: relative;
-  display: block;
-  margin-left: 12px;
-  margin-right: auto;
-  align-items: baseline;
-}
-
 .checkbox {
-  width: 16px;
-  height: 15px;
-  border-radius: 2px;
-  margin-right: 7px;
-}
-
-.check-icon {
   position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
+.checkbox-icon {
+  display: inline-block;
   width: 16px;
   height: 15px;
+  margin-right: 7px;
+    
   border: 2px solid $dark-color;
-  border-radius: 2px;
-  margin-right: 8px;
-  fill: $white-color;
+  border-radius: 4px;
+  background-color: rgba(255, 255, 255, 0);
 
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-   .checkbox:checked + & {
-    fill: $accent-color;
-    border: none;
-  }
+  transition-property: border, background-color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-
-.form-text-accept {
-  margin-left: 24px;
-  font-size: 14px;
-  line-height: 1.71;
-  letter-spacing: 0.03em;
-}
-
-/*ВОПРОС*/
-.checkbox:checked + .form-text-accept {
-  
+.checkbox:checked + .checkbox-icon {
+  background-color: $accent-color;
   background-image: url("../images/checkbox_vector.svg");
   background-position: center;
   background-size: contain;
   background-repeat: no-repeat;
   background-origin: border-box;
-  border-color: var(--accent-color);
+  border-color: accent-color;
 }
 
+.checkbox:focus ~ .checkbox-icon {
+  border-color: $accent-color;
+}
 
 .contract {
   color: $accent-color;
