--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -340,7 +340,8 @@ img {
 }
 
 .portfolio-item:hover,
-.portfolio-item:focus {
+.portfolio-item:focus,
+a.filtre:focus {
   -webkit-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
           box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
@@ -350,6 +351,11 @@ img {
   opacity: 0.9;
   -webkit-transform: translateY(0);
           transform: translateY(0);
+}
+
+.filtre {
+  text-decoration: none;
+  display: block;
 }
 
 .portfolio-card {
