--- a/sass/layouts/_portfolio.scss
+++ b/sass/layouts/_portfolio.scss
@@ -16,7 +16,8 @@
 }
 
 .portfolio-item:hover,
-.portfolio-item:focus {
+.portfolio-item:focus,
+a.filtre:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
 }
@@ -26,6 +27,12 @@
   opacity: 0.9;
   transform: translateY(0);
 }
+
+.filtre {
+  text-decoration: none;
+  display: block;
+}
+
 
 .portfolio-card {
   position: relative;
@@ -86,6 +93,7 @@
   line-height: 1.87;
   letter-spacing: 0.03em;
 }
+
 .link-porfolio {
   display: block;
   text-decoration: none;
