--- a/sass/main.scss
+++ b/sass/main.scss
@@ -14,3 +14,4 @@
 @import "./components/form-footer";
 @import "./components/modal";
 @import "./components/modal-form";
+@import "./layouts/portfolio";
