--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,4 +1,5 @@
 @import "./utils/variables";
+@import "./base/fonts";
 @import "./base/common";
 @import "./utils/visually-hidden";
 @import "./components/logo";
