--- a/sass/layouts/_portfolio.scss
+++ b/sass/layouts/_portfolio.scss
@@ -20,6 +20,7 @@
 a.filtre:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
+    
 }
 
 .portfolio-item:hover .hover-card,
@@ -33,6 +34,10 @@ a.filtre:focus {
   display: block;
 }
 
+.filtre:focus .hover-card {
+  opacity: 1;
+  transform: translateY(0);
+}
 
 .portfolio-card {
   position: relative;
